fix statusbar overlapping workspace

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,9 +107,10 @@ body {
 
 #workspace{
   position:absolute;
-  width: 100%;
-  left: 0%;
-  height: calc(100% - 64px);
+  border-style: solid;
+  border-width: 5px;
+  border-color:#b8b808;
+  height: calc(90% - 64px);
   top: 64px;
 }
 
